Fix broken layout on certain screen sizes
Remove reference to nonexistent script

--- a/WebSudoku/Layout/MainLayout.razor.css
+++ b/WebSudoku/Layout/MainLayout.razor.css
@@ -8,6 +8,10 @@ main {
     flex: 1;
 }
 
+.page {
+    min-height: 100vh;
+}
+
 .sidebar {
     background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
 }
@@ -53,7 +57,7 @@ main {
 
     .sidebar {
         width: 250px;
-        height: 100vh;
+        max-height: 100vh;
         position: sticky;
         top: 0;
     }
